style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Roboto&display=swap');

:root {
    --cor-primaria: #F3F5FC;
    --cor-secundaria: #0A3871;
    --cor-terciaria: #D8DFE8;
    --cor-quaternaria: #FFFFFF;
}

* {
    margin: 0;
    padding: 0;
    font-family: 'Inter', sans-serif;
}

body {
    background-color: var(--cor-primaria); 
    height: 85vh;
}

.logo {
    background-color:var(--cor-primaria);
    padding: 2%;
    height: 6vh;
}

.principal {
    display: flex;
    border: 5px solid var(--cor-primaria);
    align-items: center;
    justify-content: space-evenly;
    background: var(--cor-primaria);
    box-sizing: border-box;
    text-align: left;
    height: 100%;
}

.lado__esquerdo {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 80vh;
}

.container__input {
    display: flex;
    outline: none;
    width: 100%;
    height: 63vh;
    margin: 0px;
    padding: 5px; 
    background-color: var(--cor-primaria);
    border: var(--cor-primaria);
    font-size: 1.5rem;
    font-style: normal;
    font-weight: 400;
    text-wrap: wrap;
    resize: none;
    color:var(--cor-secundaria);
}

.container__output {
    width: 35%;
    height: 95%;
    border-radius: 24px;
    background: var(--cor-quaternaria);
    font-size: 1.5rem;
    font-style: normal;
    font-weight: 400;
    color: var(--cor-secundaria);
    display: flex;
    flex-direction: column;
    text-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
}

#informacao {
    display: flex;
    justify-content: center;
    align-items: center;
    
}

.container__botoes {
    display: flex;
    flex-direction: row;
    column-gap: 5%;
    padding: 3%;
}

.container__botao {
    display: flex;
    width: 24vw;
    min-width: 24vw;
    padding: 2.5%;
    flex-shrink: 1;
    align-items: center;
    border-radius: 24px;
    font-size: 1.25rem;
    font-style: normal;
    font-weight: 400;
    justify-content: center;
    border: var(--cor-secundaria) solid 1px;
}



.texto__output {
    display: flex;
    text-wrap: wrap;
    flex-direction: column;
    word-break: break-word;
    text-align: left;
    width: 85%;
}

#resultado {
    text-align: left;
    color: #495057;
    padding: 2%
}

#sem_mensagem {
    text-align: center;
    color: #495057
}
#desenho {
    height: 50%;
    display: flex;
    justify-content: center;
}
#svgPessoaLupa {

    width: 95%;
    height:95%;
    padding: auto;
}

#observacao {
    font-size: 1rem;
    color: #495057;
    text-align: center;
}

#cripto {
    background-color: var(--cor-secundaria);
    color: var(--cor-primaria);
}

#decripto {
    background: var(--cor-terciaria);
    color: #495057;
    
}
#cripto:hover {
    background-color: var(--cor-terciaria);
    color: var(--cor-secundaria);
    transition: 0.6s;
}
#decripto:hover {
    background-color: var(--cor-secundaria);
    color: var(--cor-primaria);
    transition: 0.6s;
}

#botaoCopia {
    display: flex;
    justify-content: center;
    background-color: var(--cor-primaria);
    border: #0A3871 1px solid;
    min-height: 70px;
}

#botaoCopia:hover {
    background-color: var(--cor-secundaria);
    color: var(--cor-primaria);
    transition: 0.6s;
}

@media only screen and (max-width: 768px) and (min-width: 376px) {
    .principal {
        flex-direction: column;
        padding: 0%;
        width: 100vw;
        border: 0;
        justify-content: space-between;
        height: 80dvh;
        
    }

    .lado__esquerdo{
        width: 75vw;
        height: auto;
        max-height: 65%;
        padding: 0;
        align-self: center;
        
    }

    .container__botoes {
        flex-direction: row;
        margin: 0;
        padding: 0;
        border: 0;
        gap: 6px;
        
    }

    .container__botao {
        margin: 0;
        width: 45vw; 
        height: 7vh;
    }

    .container__input {
        margin: 0;
        padding: 0;
        border: 0;
        width: 100%;
        justify-content: left;
    }

    .container__output {
        margin: 0%;
        padding: 0;
        border: 0;
        height: auto;
        padding: 10%;
        width: 75vw;
    }

    #desenho {
        display: none;
    }

    #observacao {
        text-wrap: wrap;
    }

    .lado__esquerdo{
        width: auto;   
    }

    .logo{
        padding: 5px;
    }
}

@media only screen and (max-width: 375px) {
    .principal {
        flex-direction: column;
        padding: 0%;
        width: 100vw;
        border: 0;
        justify-content: space-between;
        height: 80dvh;
        align-items: center;
    }

    .lado__esquerdo{
        width: 95vw;
        align-items: center;
        padding: 0;
        height: auto;
        max-height: 65%;
        align-self: center;
    }

    .container__botoes {
        flex-direction: column;
        margin: 0;
        padding: 0;
        border: 0;
        gap: 6px;
    }

    .container__botao {
        margin: 0;
        width: 80vw; 
        height: 7vh;
    }

    .container__input {
        margin: 0;
        padding: 0;
        border: 0;
        width: 100%;
        
        justify-content: left;
    }

    .container__output {
        margin: 0%;
        padding: 0;
        border: 0;
        height: auto;
        padding: 10%;
        width: 80vw;
    }

    #desenho {
        display: none;
    }

    #observacao {
        text-wrap: wrap;
    }



    .logo{
        padding: 2%;
    }
}

